# cmd-monitor

./: .gitignore  README.md  pyproject.toml
.github/hooks/: hooks.json
config/: default.toml.example
docs/: USAGE.md
scripts/: diagnose_wt.py  test_inject.py
src/cmd_monitor/: __init__.py  __main__.py  auto_replier.py  auto_reply_scheduler.py  cli.py  config.py  daemon.py  feishu_client.py  hook_handler.py  hook_installer.py  inject_router.py  injector.py  input_injector.py  ipc.py  logger.py  ps_monitor.py  session_registry.py  state_manager.py  token_router.py  windows_term.py
tests/: test_auto_replier.py  test_cli.py  test_config.py  test_daemon.py  test_feishu_client.py  test_hook_handler.py  test_hook_installer.py  test_inject_router.py  test_input_injector.py  test_ipc_builders.py  test_per_session_and_scheduler.py  test_ps_monitor.py  test_session_registry.py  test_state_manager.py  test_token_router.py  test_windows_term.py
